fixed home article margin left in mkdocs version 1.2.3

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -22,6 +22,10 @@
   .md-sidebar--primary {
     display: none;
   }
+
+  [dir=ltr] .md-sidebar--primary:not([hidden])~.md-content>.md-content__inner {
+    margin-left: 0;
+  }
 }
 
 @keyframes continuousgradient {
