--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -40,7 +40,8 @@
 }
 
 /* Make community tab distinct until it moves to mkdocs */
-.md-tabs__list li:nth-last-child(1) {
+.md-tabs__list li:nth-last-child(1),
+.md-tabs__list li:nth-last-child(2) {
   background: var(--home-color);
   float: right;
 }
