--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -65,20 +65,20 @@
 }
 
 /* bit of a hack to stop the banner taking space when empty */
-.md-announce .md-announce__inner {
+.md-banner .md-banner__inner {
   margin: 0 auto;
   padding: 0;
 }
-.md-announce {
+.md-banner {
   background: #fff5b5;
 }
-.md-announce .versionwarning h1 {
+.md-banner .versionwarning h1 {
   font-weight: bold;
 }
-.md-announce .versionwarning p {
+.md-banner .versionwarning p {
   color: black;
 }
-.md-announce a {
+.md-banner a {
   color: blue;
   text-decoration: underline;
 }
