--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -241,31 +241,36 @@ h2.secondary-headline, h3.trusted-by {
   transform: scale(1.15);
 }
 
-.why-serverless-container .md-typeset h1 {
+.why-serverless-container .md-typeset h1,
+.trying-it-all-container .md-typeset h1 {
   margin-bottom: 1rem;
 }
 
-.why-serverless-container .md-typeset h2 {
+.why-serverless-container .md-typeset h2,
+.trying-it-all-container .md-typeset h2 {
   font-weight: bold;
   color: black;
   margin: 0;
 }
 
 .why-serverless-container .normal-text {
-  margin: 0 auto 2rem;
-  max-width: 75%;
+  font-size: .8rem;
 }
 
-.why-serverless-container .img-table {
+.why-serverless-container .img-table,
+.trying-it-all-container .img-table {
   margin: 1rem auto -1rem;
 }
 
-.why-serverless-container .img-row {
+.why-serverless-container .img-row,
+.trying-it-all-container .img-row {
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
 }
 
-.why-serverless-container .img-col {
+.why-serverless-container .img-col,
+.trying-it-all-container .img-col {
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -276,12 +281,12 @@ h2.secondary-headline, h3.trusted-by {
 }
 
 .why-serverless-container .md-typeset img:hover {
-  animation: scale 1s ease-in-out;
+  animation: scale 800ms ease-in;
 }
 
 @keyframes scale {
   to {
-    transform: scale(1.1);
+    transform: scale(1.15);
   }
 }
 
